# penguin-app

./: LICENSE
penguin-app-react-files/: package-lock.json  package.json
penguin-app-react-files/src/: App.css  App.js  AppearingText.css  AppearingText.js  Button.css  Button.js  InputName.css  InputName.js  Penguin.css  Penguin.js  UserInteraction.js
penguin-back-end/: pyproject.toml
penguin-back-end/penguin_back_end/: main.py
penguin-back-end/penguin_back_end/domain/: model.py
penguin-back-end/penguin_back_end/random_sentence_generator/: sentence_generator.py  sentences.py
penguin-back-end/tests/: test_penguin_back_end.py
