[tool.poetry]
name = "penguin_back_end"
version = "0.1.0"
description = ""
authors = ["Fabian Schomerus <97347781+fabayoun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
