[tool.poetry]
name = "penguin-back-end"
version = "0.1.0"
description = ""
authors = ["Fabian Schomerus <97347781+fabayoun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.2"
self = "^2020.12.3"
Flask = "^2.2.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
